# thor_mang_launch

./: CMakeLists.txt  package.xml
config/: head_camera.yaml
launch/: chest_lidar.launch  chest_lidar_proc.launch  onboard.launch  robot_bringup.launch  state_estimation.launch  worldmodel.launch
thor_mang_drake_launch/: CMakeLists.txt  package.xml
thor_mang_drake_launch/launch/: real_thor_drake_matlab.launch  real_thor_drake_matlab_gui.launch  thor_drake_matlab.launch  thor_drake_matlab_gui.launch
thor_mang_field_launch/: CMakeLists.txt  package.xml
thor_mang_field_launch/launch/: field.launch
thor_mang_ocs/: CMakeLists.txt  package.xml
thor_mang_ocs/config/: control_modes_robot.yaml  thor_mang_camera_topics.yaml  thor_mang_hand_parameters.yaml
thor_mang_ocs/hands/: l_stump_ghost.launch  l_vt_hand_ghost.launch  r_stump_ghost.launch  stump_ghost.srdf  stump_ghost.urdf.xacro
thor_mang_ocs/launch/: behavior_ocs.launch  perception_ocs.launch  primary_ocs.launch  primary_ocs.launch.orig  thor_mang_main_ui.launch  thor_mang_ocs.launch  thor_mang_ocs_model.launch  thor_mang_ocs_nodelets.launch
thor_mang_onboard_launch/: CMakeLists.txt  package.xml
thor_mang_onboard_launch/config/: scan_filter.yaml  self_filtering_links.yaml
thor_mang_onboard_launch/launch/: biped_state_estimation.launch  chest_lidar.launch  chest_lidar_proc.launch  drake_with_onboard_all.launch  head_camera.launch  head_lidar.launch  hector_slam.launch  manipulation_controllers.launch  microstrain_3dm_gx5_25.launch  moveit_planning.launch  (+15 more)
thor_mang_ui_launch/: CMakeLists.txt  package.xml
(+32 files in other folders)
