<?xml version="1.0"?>
<package>
  <name>thor_mang_drake_launch</name>
  <version>0.0.1</version>
  <description>Launch files to start Drake with THOR robot</description>

  <maintainer email="steinachim@gmx.de">Achim Stein</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>